[gd_scene load_steps=30 format=3 uid="uid://bou780e4w75un"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_ao6ml"]
[ext_resource type="PackedScene" uid="uid://checsqe14agle" path="res://background.tscn" id="2_32us4"]
[ext_resource type="PackedScene" uid="uid://bdamtbrpkjtu1" path="res://achievements.tscn" id="3_ap3ca"]
[ext_resource type="Texture2D" uid="uid://n75okfrrg1mv" path="res://images/achievements.png" id="4_joy4s"]
[ext_resource type="Texture2D" uid="uid://crnyy3aybyxy5" path="res://images/snowTiger_backgroundClouds.png" id="4_k6d80"]
[ext_resource type="Texture2D" uid="uid://vhp6t48hdbkn" path="res://images/lockIcon.png" id="4_soimu"]
[ext_resource type="Texture2D" uid="uid://bx3ra0q88duj5" path="res://leftArrow.png" id="6_lkuxm"]
[ext_resource type="Texture2D" uid="uid://pvkextrk6u70" path="res://images/audioOn.png" id="6_rq66x"]
[ext_resource type="AudioStream" uid="uid://b0yp34l32s8k5" path="res://sounds/pianoMainMenu.wav" id="7_5f7ut"]
[ext_resource type="Texture2D" uid="uid://dopglohvb2f6d" path="res://rightArrow.png" id="7_lbx3i"]
[ext_resource type="Texture2D" uid="uid://ok8hn6oa1eb0" path="res://images/leaderboards.png" id="8_3twn4"]
[ext_resource type="AudioStream" uid="uid://cjci3olbl0px7" path="res://sounds/hit.wav" id="8_4ytqn"]
[ext_resource type="Texture2D" uid="uid://bdvi6v655lk3l" path="res://googleSignIn.png" id="8_ctlpq"]
[ext_resource type="AudioStream" uid="uid://dn08ykdw0qply" path="res://sounds/rightClick.wav" id="9_5ac5k"]
[ext_resource type="AudioStream" uid="uid://0wic0hpgjtph" path="res://sounds/leftClick.wav" id="10_krk4e"]
[ext_resource type="AudioStream" uid="uid://b64m35wtl0sji" path="res://sounds/dash.wav" id="11_8aal4"]
[ext_resource type="Texture2D" uid="uid://dqibi56mi8pgb" path="res://images/Coingood.png" id="12_ihqi1"]
[ext_resource type="Script" path="res://ad_banner.gd" id="15_2o17a"]
[ext_resource type="Texture2D" uid="uid://dxpiwwvp2iy4r" path="res://images/snowTiger_stand.png" id="16_wnna2"]
[ext_resource type="Texture2D" uid="uid://cuy7p7d5qx4qh" path="res://images/snowTiger_jump_one.png" id="17_3kmqt"]
[ext_resource type="Texture2D" uid="uid://ck0p2jg0ll85g" path="res://images/hamburger.png" id="19_l6o0n"]

[sub_resource type="LabelSettings" id="LabelSettings_n4dvs"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ai23m"]
font_size = 23
font_color = Color(0.901961, 0.431373, 0.839216, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_smo6i"]
font_size = 23
font_color = Color(0.901961, 0.431373, 0.839216, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dygsd"]
font_size = 23
font_color = Color(0.901961, 0.431373, 0.839216, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_apnuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_wnna2")
}, {
"duration": 1.0,
"texture": ExtResource("17_3kmqt")
}],
"loop": true,
"name": &"Loading",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_33y0p"]
font_size = 18
font_color = Color(0.901961, 0.431373, 0.839216, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k4dd7"]
font_size = 37

[sub_resource type="LabelSettings" id="LabelSettings_0se23"]
font_size = 61
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node"]
script = ExtResource("1_ao6ml")
game_scene = ExtResource("2_32us4")
achievements_scene = ExtResource("3_ap3ca")

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(-37, 206)
texture = ExtResource("4_k6d80")

[node name="CharacterImage" type="TextureRect" parent="."]
offset_left = 264.0
offset_top = 136.0
offset_right = 564.0
offset_bottom = 436.0
scale = Vector2(0.65, 0.65)

[node name="LockIcon" type="TextureRect" parent="."]
offset_left = 268.0
offset_top = 142.0
offset_right = 1292.0
offset_bottom = 1166.0
scale = Vector2(0.18, 0.18)
texture = ExtResource("4_soimu")

[node name="UnlockButton" type="Button" parent="."]
visible = false
offset_left = 292.0
offset_top = 384.0
offset_right = 440.0
offset_bottom = 443.0
text = "Unlock: 300"

[node name="StartGame" type="Button" parent="."]
offset_left = 290.0
offset_top = 351.0
offset_right = 438.0
offset_bottom = 411.0
text = "Dash"

[node name="LeftButton" type="TextureButton" parent="."]
offset_left = 71.0
offset_top = 185.0
offset_right = 1095.0
offset_bottom = 1209.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("6_lkuxm")

[node name="RightButton" type="TextureButton" parent="."]
offset_left = 455.0
offset_top = 185.0
offset_right = 1479.0
offset_bottom = 1209.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_lbx3i")

[node name="ActiveSprite" type="Sprite2D" parent="."]

[node name="TitleText" type="Label" parent="."]
offset_left = 22.0
offset_top = 400.0
offset_right = 267.0
offset_bottom = 423.0

[node name="GoogleSignIn" type="TextureButton" parent="."]
offset_left = 663.0
offset_top = 13.0
offset_right = 703.0
offset_bottom = 53.0
texture_normal = ExtResource("8_ctlpq")

[node name="LeaderboardButton" type="TextureButton" parent="."]
offset_left = 599.0
offset_top = 5.0
offset_right = 1623.0
offset_bottom = 1029.0
scale = Vector2(0.055, 0.055)
texture_normal = ExtResource("8_3twn4")

[node name="Achievements" type="TextureButton" parent="."]
offset_left = 543.0
offset_top = 7.0
offset_right = 1567.0
offset_bottom = 1031.0
scale = Vector2(0.055, 0.055)
texture_normal = ExtResource("4_joy4s")

[node name="SoundToggle" type="TextureButton" parent="."]
offset_left = 492.0
offset_top = 14.0
offset_right = 534.0
offset_bottom = 56.0
texture_normal = ExtResource("6_rq66x")
ignore_texture_size = true
stretch_mode = 0

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5f7ut")
volume_db = -10.0

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4ytqn")

[node name="RightClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5ac5k")

[node name="LeftClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_krk4e")

[node name="DashClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_8aal4")

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 351.0
offset_top = 12.0
offset_right = 438.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "0"
label_settings = SubResource("LabelSettings_n4dvs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinLabelSprite" type="Sprite2D" parent="."]
position = Vector2(327, 34)
scale = Vector2(0.06, 0.06)
texture = ExtResource("12_ihqi1")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 11.0
offset_top = 412.0
offset_right = 711.0
offset_bottom = 474.0

[node name="AdBanner" type="Node2D" parent="."]
script = ExtResource("15_2o17a")

[node name="ScoreDropDown" type="TextureButton" parent="."]
offset_left = 17.0
offset_top = 9.0
offset_right = 1041.0
offset_bottom = 1033.0
scale = Vector2(0.045, 0.045)
texture_normal = ExtResource("19_l6o0n")

[node name="HiScore" type="Label" parent="."]
visible = false
offset_left = 14.0
offset_top = 62.0
offset_right = 205.0
offset_bottom = 96.0
text = "Highscore:"
label_settings = SubResource("LabelSettings_ai23m")

[node name="AnimalHiScore" type="Label" parent="."]
visible = false
offset_left = 14.0
offset_top = 98.0
offset_right = 165.0
offset_bottom = 133.0
text = "Animal Highscore:"
label_settings = SubResource("LabelSettings_smo6i")

[node name="LastScore" type="Label" parent="."]
visible = false
offset_left = 15.0
offset_top = 136.0
offset_right = 156.0
offset_bottom = 171.0
text = "Last score: "
label_settings = SubResource("LabelSettings_dygsd")

[node name="LoadingAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(352, 235)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_apnuh")
animation = &"Loading"

[node name="MainMenuTipLabel" type="Label" parent="."]
offset_left = 462.0
offset_top = 351.0
offset_right = 697.0
offset_bottom = 410.0
theme_override_font_sizes/font_size = 20
label_settings = SubResource("LabelSettings_33y0p")
autowrap_mode = 2

[node name="TipLabel" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = 2.0
offset_top = 66.0
offset_right = 717.0
offset_bottom = 206.0
text = "Tap twice to double jump"
label_settings = SubResource("LabelSettings_k4dd7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="LoadingLabel" type="Label" parent="."]
visible = false
offset_left = 206.0
offset_top = 373.0
offset_right = 533.0
offset_bottom = 477.0
text = "LOADING..."
label_settings = SubResource("LabelSettings_0se23")

[node name="WatchAd" type="Button" parent="."]
visible = false
offset_left = 11.0
offset_top = 411.0
offset_right = 166.0
offset_bottom = 472.0
text = "Watch Ad
25 coins"

[connection signal="pressed" from="UnlockButton" to="." method="_on_unlock_button_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="GoogleSignIn" to="." method="_on_google_sign_in_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="SoundToggle" to="." method="_on_sound_toggle_pressed"]
[connection signal="finished" from="MenuMusic" to="." method="_on_menu_music_finished"]
[connection signal="pressed" from="ScoreDropDown" to="." method="_on_score_drop_down_pressed"]
[connection signal="pressed" from="WatchAd" to="." method="_on_watch_ad_pressed"]
